max-height set for footer to avoid overlap with search-box

--- a/main.css
+++ b/main.css
@@ -120,6 +120,7 @@ a:hover {
 
 .main {
   margin-top: 90px;
+  margin-bottom: 20px;
 }
 
 .google_logo {
@@ -250,6 +251,11 @@ span {
   padding-right:3px;
 }
 
-
+@media all and (max-height: 478px) {
+  footer {
+    top: 478px;
+    position: static;
+  }
+}
 
 
